--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8"/>
-	<meta description="Mi priemera web"/>
+	<meta description="Mi primera web"/>
 	<title>Diseño Web</title>
 </head>	
 <body>		
